apps/mealie/base/mealie-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-clusterip-service
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - name: cluster-http
      protocol: TCP
      port: 9000
      targetPort: 9000
