apps/mealie/base/mealie-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
  namespace: mealie
spec:
  type: NodePort
  selector:
    app: mealie
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30005
