apps/mealie/base/mealie-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
  name: mealie-route
  namespace: mealie
spec:
  hostnames:
  - mealie.lokal
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: traefik-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: mealie-clusterip-service
      port: 9000
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
