apps/mealie/base/mealie-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie-ingress
  namespace: mealie
spec:
  rules:
  - host: mealie.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie-clusterip-service
            port:
              name: cluster-http
